# ToxPipeMCP

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: cbtmcp.py  main.py  mcp_client_api.py  tpmcp.py  utils.py
src/.config/: example.env
src/literature_search/: search.py
src/llm/: llm.py
src/notebooks/: test.ipynb
src/rag/: __init__.py  analyze_query.py  gather_context.py  guardrails.py  llms.py  query.py  utils.py
src/vignettes/: mcp-client.py  mcp_client.py
